Fixing various spacing issues on index page, and adding links

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,7 +4,7 @@
 $primary-color: #fff;
 
 // Anchor color
-$secondary-color: #0099ff;
+$secondary-color: #1aa3ff;
 
 // Font color
 $font-color: #000;
